--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v2
+        with:
+          token: ${{secrets.CODECOV_TOKEN}}
 
       - name: Archive code coverage results
         uses: actions/upload-artifact@v2
